--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch sass/main.scss css/style.css"
+    "watch:sass": "sass --watch sass/main.scss css/style.css",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
+
+    "compile:sass": "sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "sass css/style.prefix.css css/style.css --style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -15,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/Satx98/project-natours/issues"
   },
-  "homepage": "https://github.com/Satx98/project-natours#readme"
+  "homepage": "https://github.com/Satx98/project-natours#readme",
+  "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "concat": "^1.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
+    "sass": "^1.26.8"
+  }
 }
